# dx-flipbook

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
examples/: dual.rs  follow.rs
src/: easing.rs  lib.rs  main.rs  rectdata.rs  stopwatch.rs
src/components/: animatable.rs  mod.rs
src/controllers/: animation.rs  animation_builder.rs  animation_controller.rs  animation_queue.rs  mod.rs  use_flipbook.rs
src/hooks/: mod.rs  use_flipbook.rs
